--- a/sass/components/_signup-form.scss
+++ b/sass/components/_signup-form.scss
@@ -16,7 +16,7 @@
 
     &[aria-invalid="true"] {
       outline-color: clr(primary, 400);
-      background: rgb(clr(primary, 400), 15%) !important;
+      background: rgba(255, 98, 87, 15%) !important;
     }
   }
 
