--- a/sass/components/_signup-form.scss
+++ b/sass/components/_signup-form.scss
@@ -9,9 +9,20 @@
     border: 1px solid hsla(243, 28%, 13%, 25%);
     border-radius: size(8);
     outline: 1px solid transparent;
+    background-color: none;
 
     &:focus-within {
       outline-color: #d8d8d8;
     }
+
+    &[aria-invalid="true"] {
+      outline-color: clr(primary, 400);
+      background-color: rgba(255, 98, 87, 15%) !important;
+    }
+  }
+
+  .error-message {
+    position: absolute;
+    right: 0;
   }
 }
