--- a/sass/abstracts/_sizes.scss
+++ b/sass/abstracts/_sizes.scss
@@ -12,11 +12,8 @@ $sizes: (
   48: 3rem,
 );
 
-// $section-padding: clamp(2.5rem, 1.2236rem + 5.446vi, 6.125rem)
-//   clamp(1.5rem, 0.6197rem + 3.7559vi, 4rem);
-
-$section-padding: clamp(2.5rem, 5vw + 1rem, 6.125rem)
-  clamp(1.5rem, 4vw + 0.5rem, 4rem);
+$section-mobile-padding: 2.5rem 1.5rem;
+$section-desktop-padding: 6.125rem 4rem;
 
 $illustration-padding: 1.5rem;
 
